--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@ h1,
 h2,
 h3 {
   margin: 0;
+  text-align: center;
 }
 
 h1 {
-  font-size: 96px;
+  font-size: 48px;
+  line-height: 1.5;
+  font-weight: 500;
 }
 
 h2 {
@@ -25,6 +28,8 @@ h2 {
 h3 {
   font-size: 24px;
   opacity: 0.7;
+  font-weight: 500;
+  line-height: 1.2;
 }
 
 .navigation-links {
@@ -64,16 +69,20 @@ h3 {
 
 .about-paragraphs {
   margin: 30px 0;
+  text-align: center;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
 .about-paragraphs p {
   margin: 10px;
 }
 p {
-  padding: 20px;
+  margin: 10px;
   border-radius: 4px;
   font-size: 18px;
   line-height: 1.5;
+  text-align: center;
 }
 .email-link {
   display: flex;
