--- a/style.css
+++ b/style.css
@@ -5,20 +5,17 @@
 }
 
 body {
-  margin: 100px;
+  margin: 100px 0;
 }
 
 h1,
 h2,
 h3 {
   margin: 0;
-  text-align: center;
 }
 
 h1 {
-  font-size: 48px;
-  line-height: 1.5;
-  font-weight: 500;
+  font-size: 96px;
 }
 
 h2 {
@@ -28,10 +25,11 @@ h2 {
 h3 {
   font-size: 24px;
   opacity: 0.7;
-  font-weight: 500;
-  line-height: 1.2;
 }
-
+p {
+  font-size: 18px;
+  line-height: 1.5;
+}
 .navigation-links {
   display: flex;
   margin-top: 40px;
@@ -51,6 +49,9 @@ h3 {
   text-decoration: none;
   text-transform: capitalize;
 }
+.primary-link:hover {
+  color: white;
+}
 
 .secondary-link {
   color: var(--primary-color);
@@ -69,21 +70,12 @@ h3 {
 
 .about-paragraphs {
   margin: 30px 0;
-  text-align: center;
-  font-weight: 400;
-  line-height: 1.5;
 }
 
 .about-paragraphs p {
   margin: 10px;
 }
-p {
-  margin: 10px;
-  border-radius: 4px;
-  font-size: 18px;
-  line-height: 1.5;
-  text-align: center;
-}
+
 .email-link {
   display: flex;
   justify-content: center;
@@ -94,4 +86,26 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .project-link {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
+  }
 }
